<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pickers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSurface">

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/categoryPicker"
        app:layout_constraintTop_toBottomOf="@+id/sortPicker" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryPicker"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColorHint="@color/colorOnSurface"
        app:boxCornerRadiusBottomEnd="2dp"
        app:boxCornerRadiusBottomStart="2dp"
        app:layout_constraintEnd_toStartOf="@+id/sortPicker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/category_drop_down"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:textColor="@color/colorPrimary"
            android:hint="@string/category"
            android:textColorHighlight="@color/colorPrimary"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sortPicker"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColorHint="@color/colorOnSurface"
        app:boxCornerRadiusBottomEnd="2dp"
        app:boxCornerRadiusBottomStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/categoryPicker"
        app:layout_constraintEnd_toStartOf="@+id/periodPicker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/categoryPicker"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/sort_drop_down"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/sort"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/periodPicker"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/colorOnSurface"
        app:boxCornerRadiusBottomEnd="2dp"
        app:boxCornerRadiusBottomStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sortPicker"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/period_drop_down"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/period"

            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>