<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.android.multistream.ui.widgets.hide_scroll_view.HideScrollView
        android:id="@+id/hideScrollView"
        android:layout_marginTop="75dp"
        app:topHideHeight="32dp"
        app:bottomHideHeight="35dp"
        android:fadeScrollbars="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homeText"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/header_font"
                android:text="DISCOVER"
                android:textColor="@color/colorOnSurface"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/channelsViewPager"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                android:paddingBottom="20dp"
                android:background="?attr/colorSurface"
                app:layout_constraintTop_toBottomOf="@+id/homeText" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/twitchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/header_font"
                android:paddingStart="10dp"
                android:textStyle="bold"
                app:alignment="right"
                android:layout_marginStart="@dimen/stripeLineMargin"
                app:layout_constraintTop_toBottomOf="@id/channelsViewPager"
                app:titleText="TWITC"
                app:titleTextColor="@color/colorPrimary"
                app:titleTextSize="@dimen/mediumStripeTitleSize"
                app:viewsMargin="4dp"
                tools:layout_editor_absoluteX="32dp" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/topGamesText"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/itemMargin"
                app:alignment="left"
                android:rotationY="5"
                android:shadowColor="@color/headlineShadowColor"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="1"
                app:layout_constraintTop_toBottomOf="@id/twitchText"
                android:layout_marginEnd="@dimen/stripeLineMargin"
                android:paddingEnd="10dp"
                app:titleText="@string/top_games"
                android:elevation="20dp"
                app:titleTextColor="#ffffff"
                app:titleTextSize="@dimen/captionStripeTitleSize" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/twitchTopGamesList"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@color/colorSurface"
                android:layout_marginTop="@dimen/itemMargin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topGamesText"
                tools:listitem="@layout/list_item_one" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/twitchFollowingLiveStreamsText"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:elevation="20dp"
                android:paddingStart="10dp"
                android:shadowColor="@color/headlineShadowColor"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="1"
                android:layout_marginStart="@dimen/stripeLineMargin"
                android:rotationY="-2"
                app:alignment="right"
                app:layout_constraintTop_toBottomOf="@id/twitchTopGamesList"
                app:titleText="@string/live_following_streams"
                app:titleTextColor="#ffffff"
                app:titleTextSize="@dimen/captionStripeTitleSize"
                tools:layout_editor_absoluteX="32dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/liveFollowingStreamsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/itemMargin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/twitchFollowingLiveStreamsText"
                tools:listitem="@layout/list_item_one" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/followingChannelsText"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:alignment="left"
                android:rotationY="5"
                android:shadowColor="@color/headlineShadowColor"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="1"
                app:layout_constraintTop_toBottomOf="@id/liveFollowingStreamsList"
                android:layout_marginEnd="@dimen/stripeLineMargin"
                android:paddingEnd="10dp"
                app:titleText="@string/following_channels"
                android:elevation="20dp"
                app:titleTextColor="#ffffff"
                app:titleTextSize="@dimen/captionStripeTitleSize" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/followingStreamsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/followingChannelsText"
                tools:listitem="@layout/list_item_three" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/mixerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/header_font"
                android:rotationY="5"
                android:singleLine="true"
                android:textStyle="bold"
                app:alignment="left"
                android:paddingEnd="10dp"
                android:layout_marginEnd="@dimen/stripeLineMargin"
                app:layout_constraintTop_toBottomOf="@id/followingStreamsList"
                app:titleText="MIXER"
                app:titleTextColor="@color/colorOnSecondaryVariant"
                app:titleTextSize="@dimen/mediumStripeTitleSize"
                app:viewsMargin="4dp" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/mixerRecommendedChannels"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/itemMargin"
                app:alignment="left"
                android:shadowColor="@color/headlineShadowColor"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="1"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/mixerText"
                android:layout_marginEnd="@dimen/stripeLineMargin"
                app:titleText="@string/recommended_channels"
                android:elevation="20dp"
                app:titleTextColor="#ffffff"
                app:titleTextSize="@dimen/captionStripeTitleSize" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mixerRecommendedChannelsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/itemMargin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mixerRecommendedChannels"
                tools:listitem="@layout/list_item_one" />

            <com.android.multistream.ui.widgets.striped_title_panel.StripedPanelText
                android:id="@+id/mixerTopChannelsText"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="20dp"
                app:alignment="left"
                android:shadowColor="@color/headlineShadowColor"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="1"
                app:layout_constraintTop_toBottomOf="@id/mixerRecommendedChannelsList"
                app:titleText="@string/top_channels"
                app:titleTextColor="#ffffff"
                app:titleTextSize="@dimen/captionStripeTitleSize" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.android.multistream.ui.widgets.hide_scroll_view.HideScrollView>

</layout>