<?xml version="1.0" encoding="utf-8"?>
<com.android.multistream.ui.main.fragments.profile_fragment.ProfileMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileAppBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/profile_content_scene"
    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/darken_gradient"
        app:altSrc="@drawable/profile_bg" />

    <com.android.multistream.ui.widgets.follow_button.FollowButton
        android:id="@+id/follow_button"
        style="@style/FollowButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:selectedColor="@color/colorOnSecondaryVariant" />

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/followersCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/banner_progress_bar"
        style="@style/SpinKitView.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:SpinKit_Color="@color/colorOnSecondaryVariant" />

    <View
        android:id="@+id/info_divider"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/colorOnSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="@id/followersText"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/followersCount" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/back"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/header_font"
        android:textColor="@color/stripeTabLayoutTitle"
        android:lines="1"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/default_place_holder"
        app:civ_border_color="@color/stripeTabLayoutTitle"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/banner_image"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/streamerUserName"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/header_font"
        android:textColor="@color/stripeTabLayoutTitle"
        android:lines="1"
        android:text="name"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/circleImageView" />

    <View
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_icon"
        android:backgroundTint="@color/colorOnSecondaryVariant"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viewersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/agencyfb"
        android:lines="1"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/followersCount"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/info_divider"
        app:layout_constraintTop_toTopOf="@+id/followersCount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viewersText"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/views"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/info_divider"
        app:layout_constraintEnd_toEndOf="@+id/viewersCount"
        app:layout_constraintStart_toStartOf="@+id/viewersCount"
        app:layout_constraintTop_toTopOf="@+id/followersText" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="219dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/followersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/agencyfb"
        android:lines="1"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/banner_image"
        app:layout_constraintEnd_toStartOf="@+id/info_divider"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/streamerUserName"
        app:layout_constraintVertical_bias="0.25" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/followersText"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/followers_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/followersCount"
        app:layout_constraintStart_toStartOf="@+id/followersCount"
        app:layout_constraintTop_toBottomOf="@+id/followersCount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/watchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/watch_now"
        app:cornerRadius="10dp"
        app:elevation="10dp"
        app:icon="@drawable/play_icon"
        app:iconTint="@color/stripeTabLayoutTitle"
        android:textColor="@color/stripeTabLayoutTitle"
        app:iconGravity="start"
        app:iconPadding="-5dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/info_divider" />

    <View
        android:id="@+id/view2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/arrow_down"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />
</com.android.multistream.ui.main.fragments.profile_fragment.ProfileMotionLayout>